--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Test Maven Project
+name: Java CI with Maven
 
 on:
   push:
@@ -19,13 +19,25 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      mongodb:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Test with Maven
-      run: mvn -B test --file pom.xml
+    
+    - name: Build and test with Maven
+      env:
+        SPRING_DATA_MONGODB_HOST: localhost
+        SPRING_DATA_MONGODB_PORT: 27017
+      run: |
+        mvn -B verify --file pom.xml
